--- a/vue-news/vue-news/src/common/stylus/reset.styl
+++ b/vue-news/vue-news/src/common/stylus/reset.styl
@@ -27,8 +27,12 @@
  footer, header, menu, nav, section
    display: block
  
+ html,body
+    height 100% 
+
  body
    line-height: 1
+   overflow: atuo
  
  blockquote, q
    quotes: none
