完成详情内容

--- a/vue-news/vue-news/src/common/stylus/mixin.styl
+++ b/vue-news/vue-news/src/common/stylus/mixin.styl
@@ -6,7 +6,7 @@ border-1px($color)
     width 100%
     left 0
     bottom 0
-    border-top 1px solid $color
+    border-top:1px solid $color;  /*no*/
     content ' '
 
 border-none()
