--- a/vue-news/vue-news/src/base/slider/slider.styl
+++ b/vue-news/vue-news/src/base/slider/slider.styl
@@ -1,18 +1,19 @@
 @import "~common/stylus/index"
 
 .slider
-  width 100%
-  height 100%
+  width 10rem
   .slider-group
     position relative
     overflow hidden
     white-space nowrap
     .slider-item
       float left
+      width: 10rem
+      vertical-align middle
       box-sizing border-box
       text-align center
       overflow hidden
       img
         display block
         width 100%
-        height 100%
+        height auto
