--- a/vue-news/vue-news/src/components/home-page/home-page.styl
+++ b/vue-news/vue-news/src/components/home-page/home-page.styl
@@ -5,6 +5,7 @@
   top 100px
   bottom 0
   width 100%
+  background-color: #f2f2f2;
   .home-page-content
     height 100%
     overflow hidden
@@ -22,7 +23,11 @@
         height 100%
         overflow hidden
     .newList
+      padding: 30px 20px
+      box-sizing: border-box
+      background-color: #f2f2f2;
       .model
+        background-color: #f2f2f2;
         &.morning
           color rgb(51,51,51)
           background-color rgb(255,255,255)
@@ -31,24 +36,29 @@
           background-color rgb(52,52,52)
         .new
           display flex
+          box-sizing: border-box;
           position relative
-          padding 20px 0 20px 10px
+          border: 1px solid #eaeaea;
+          border-radius: 5px; /*no*/
+          padding 40px 20px 40px 20px
+          border-bottom: 15px solid #f2f2f2
           &.morning
             border-1px(rgba(7,17,27,0.1))
           &.night
             border-1px(rgb(43,43,43))
           .title
             flex 1
-            margin-right 10px
-            line-height 20px
+            margin-right 20px
+            line-height 40px
+            font-size 32px
           .avatar
-            flex 0 0 70px
-            width 70px
-            height 55px
+            flex 0 0 120px
+            width 120px
+            height 120px
             img
-              width 70px
-              height 55px
+              width 120px
+              height 120px
               img[lazy=loading]
-                height 55px
-                width 70px
+                height 120px
+                width 120px
                 margin auto
