--- a/vue-news/vue-news/src/components/new-detail/new-detail.styl
+++ b/vue-news/vue-news/src/components/new-detail/new-detail.styl
@@ -17,7 +17,8 @@
         position absolute
         bottom 0
         box-sizing border-box
-        font-size 24px  /*no*/
+        line-height 1.5
+        font-size:16px;  /*no*/
         padding 0 20px 20px 30px
         color rgb(255,255,255)
       img
